--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,9 @@
       ],
       "js": [
         "src/inject/inject.js"
+      ],
+      "css": [
+        "src/inject/inject.css"
       ]
     }
   ]
